# slides

./: .clangd  .gitignore  .mailmap  Dockerfile  Makefile  README.md  main.cpp  meson.build  tracks.cpp
.github/workflows/: c-cpp.yml  docker-hub.yml  docker-image.yml
SDL2-2.26.3/: Makefile  config.status  configure  sdl2-config  sdl2.pc
SDL2-2.26.3/include/: SDL_config.h
SDL2_ttf-2.20.2/: Makefile  config.status  glfont  libSDL2_ttf.la  libtool  showfont
SDL2_ttf-2.20.2/.deps/: glfont.Po  libSDL2_ttf_la-SDL_ttf.Plo  showfont.Po
SDL2_ttf-2.20.2/.libs/: glfont  libSDL2_ttf.lai  showfont
SDL2_ttf-2.20.2/autom4te.cache/: requests
